--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="script.js"></script>
   <header class="site-header">
     <h1>Music</h1>
+    <button id="dark-mode-toggle" aria-label="다크모드 토글">🌙</button>
   </header>
   <main class="feed-grid">
     <a class="feed-card" href="https://youtu.be/o6wQGmoP3e4?feature=shared" target="_blank">
@@ -88,3 +89,5 @@
       </div>
     </a>
   </main>
+  <button id="scrollTopBtn">⬆</button>
+  </body>
